[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "missiontools"
version = "0.1.0"
description = "Space mission analysis and design (SMAD) toolkit"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "skyfield",
    "pyshp",
    "shapely",
    "itur",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "jupyterlab",
    "ipykernel",
]
plot = [
    "cartopy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["missiontools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
]
