[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "missiontools"
version = "0.1.0"
description = "Space mission analysis and design (SMAD) toolkit"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "skyfield",
    "pyshp",
    "shapely",
    "itur",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "jupyterlab",
    "ipykernel",
]
plot = [
    "cartopy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["missiontools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
docs = [
    "sphinx>=8",
    "furo",
    "nbsphinx",
    "sphinx-autobuild",
    "ipython",
    "ipykernel>=7.2.0",
    "cartopy>=0.25.0",
]
