[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "missiontools"
version = "0.2.0"
description = "Space mission analysis and design (SMAD) toolkit"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "skyfield",
    "pyshp",
    "shapely",
    "itur",
]

[project.urls]
Homepage = "https://github.com/neuroblaze/missiontools"
Documentation = "https://missiontools.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "jupyterlab",
    "ipykernel",
]
plot = [
    "cartopy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["missiontools*"]

[tool.setuptools.package-data]
"missiontools.coverage.geodata" = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
docs = [
    "sphinx>=8",
    "furo",
    "nbsphinx",
    "sphinx-autobuild",
    "ipython",
    "ipykernel>=7.2.0",
    "cartopy>=0.25.0",
]
